add changelog, api reference

--- a/concepts/basic-concepts.mdx
+++ b/concepts/basic-concepts.mdx
@@ -3,13 +3,13 @@ title: 'Basic Concepts'
 description: 'Understanding the fundamental concepts of Mako Code'
 ---
 
-# Basic Concepts
-
 This page explains the core concepts and terminology used in Mako Code, your personal Polars sketch pad and analytics workflow.
 
 ## Independent Analytics Environment (IAE)
 
 Mako Code is an Independent Analytics Environment designed for data people who love to code. It provides a workflow for fast ad hoc analysis with features to productize your work.
+
+![Mako Code Editor Interface](/img/code-editor.png)
 
 ## Code Editor
 
@@ -20,6 +20,8 @@ The Monaco Code Editor (the same editor used in VS Code) provides a powerful int
 - Real-time code execution
 
 ## Data Management
+
+![Dataset Preview Interface](/img/dataset-preview.png)
 
 Mako Code uses a streamlined approach to data management:
 - Parquet as the primary local file format
