--- a/features/core-features.mdx
+++ b/features/core-features.mdx
@@ -3,11 +3,9 @@ title: 'Core Features'
 description: 'Overview of the main features of Mako Code'
 ---
 
-# Core Features
-
-Mako Code provides a comprehensive set of features to help you analyze data and build data workflows efficiently.
-
 ## Interactive Code Editor
+
+![Mako Code Editor Interface](/img/code-editor.png)
 
 Mako Code includes a powerful Monaco-based code editor with:
 
@@ -18,6 +16,8 @@ Mako Code includes a powerful Monaco-based code editor with:
 - Multiple tabs for organizing your work
 
 ## Data Management System
+
+![Dataset Preview Interface](/img/dataset-preview.png)
 
 Efficiently manage your datasets with:
 
