--- a/getting-started/quick-start.mdx
+++ b/getting-started/quick-start.mdx
@@ -1,11 +1,8 @@
 ---
 title: 'Quick Start'
-description: 'Get started with Mako Code in minutes'
+description: 'This guide will help you get up and running with Mako Code quickly for your data analysis workflows.
+'
 ---
-
-# Quick Start
-
-This guide will help you get up and running with Mako Code quickly for your data analysis workflows.
 
 ## Getting Started
 
@@ -23,10 +20,27 @@ Once you have [installed Mako Code](./installation), here's how to start analyzi
 
 ## Interface Overview
 
+The Mako Code interface is designed for efficient data analysis:
+
+![Mako Code Editor Interface](/img/code-editor.png)
+
 The interface provides:
 - Left sidebar: Saved functions, Polars API docs link, Mako docs and keyboard shortcuts
 - Right sidebar: Data management (toggle with `⌘/Ctrl + D`)
 - Editor tabs: Code, visualization and documentation views
+- Output panel: View results directly below your code
+
+## Dataset Preview
+
+When working with datasets, you can view and explore your data with the built-in preview:
+
+![Dataset Preview Interface](/img/dataset-preview.png)
+
+The dataset preview shows:
+- Paginated data view
+- Column types and schema information
+- Context panel for dataset documentation
+- Quick navigation controls
 
 ## Key Shortcuts
 
@@ -36,6 +50,8 @@ The interface provides:
 - `⌘/Ctrl + Shift + B`: New Bokeh visualization
 - `⌘/Ctrl + S`: Save Context File
 - `⌘/Ctrl + E`: Export your current tab script
+- `⌘/Ctrl + Shift + I`: Import data
+- `⌘/Ctrl + D`: Toggle data management sidebar
 
 ## Example Analysis
 
