--- a/index.mdx
+++ b/index.mdx
@@ -6,6 +6,8 @@ Welcome to the official documentation for Mako Code. This documentation will hel
 
 Mako Code is an open source Independent Analytics Environment (IAE) that is built for data people who love to code. It is a workflow designed for fast ad hoc analysis with features to let you productize your work. So you can get to answers quickly while building a foundation for future data products.
 
+![Mako Code Editor Interface](/img/code-editor.png)
+
 Mako Code is not a vibe coding tool, and doesn't come with an LLM. But it does come with an opinion:
 
 - The Monaco Code Editor
