bring back navbar

--- a/index.mdx
+++ b/index.mdx
@@ -1,4 +1,6 @@
-# Mako Code Documentation
+---
+title: 'Mako Code Documentation'
+---
 
 Welcome to the official documentation for Mako Code. This documentation will help you understand how to use Mako Code effectively for your data analysis workflows.
 
